# Earnings_call

./: .python-version  Dockerfile  README.md  index.html  main.py  pyproject.toml  requirements.txt
data/: faiss.index  metadata.json
tests/: test_main.py
