[project]
name = "earnings-call-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepgram-sdk>=7.4.0",
    "faiss-cpu==1.14.3",
    "fastapi>=0.139.0",
    "openai>=1.0.0",
    "pinecone-client>=3.0.0",
    "pypdf>=4.0.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.50.2",
]
